# openai-realtime-voice

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: __init__.py  main.py
app/core/: __init__.py  connection.py  dispatcher.py  manager.py  resilience.py
app/models/: __init__.py  config.py  enums.py  events.py
app/tests/: conftest.py  test_audio_buffer.py  test_config_validation.py  test_dispatcher.py  test_event_parsing.py  test_voice_bridge.py
app/ui/: __init__.py  bridge.py  components.py
app/utils/: __init__.py  audio.py  logging.py
